# tarbot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
backtest/: cost_model.py  evaluator.py  runner.py
config/: costs.py  settings.py  symbols.py  symbols_300.py  symbols_cs.py
dashboard/: app.py
data/: daily_loader.py  fetcher.py  jp_index_loader.py  signal_store.py  storage.py  us_loader.py  websocket_client.py  yahoo_loader.py
docs/: trading_bot_design_v2.md  trading_bot_design_v3.md  windows-handoff.md
execution/: dry_run.py  fill_monitor.py  kabu_client.py  order_engine.py  order_status.py
notification/: email_reporter.py  line_notifier.py  push_notifier.py
scripts/: build_universe.py  build_yahoo_bars.py  com.tradingbot.daily_scan.plist  daily_scan.py  diagnose_trend_filter.py  fetch_sector_map.py  kabu_ping.py  order_engine_ping.py  param_scan.py  preflight_check.py  rebuild_combo_dry_run.py  run_cs_vol_backtest.py  simulate_leverage.py  simulate_momentum.py  weekly_report.py
strategy/: indicators.py  mean_reversion.py  portfolio_allocator.py  position_sizer.py  risk_manager.py  swing.py  swing_cross_section.py  swing_momentum.py  swing_reversion.py  trade.py
tests/: test_cost_model.py  test_dry_run.py  test_evaluator.py  test_fetcher.py  test_fill_monitor.py  test_indicators.py  test_kabu_client.py  test_mean_reversion.py  test_order_engine.py  test_order_status.py  test_portfolio_allocator.py  test_position_sizer.py  test_risk_manager.py  test_runner.py  test_storage.py  (+6 more)
(+8 files in other folders)
